# iDeviceTools

./: Cargo.toml
api/: Cargo.toml
api/src/: main.rs
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs  mount.rs  pair.rs  unmount.rs  unpair.rs
ui/: Cargo.toml
