[package]
name = "api"
version = "0.1.0"
authors = ["Brilliant PHAL <mrrbrilliantwork@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonrpc-v2 = "0.10.0"
actix-rt = "1"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
lib = { path = "../lib" }
